--- a/ch08/test08_keras_sg.ipynb
+++ b/ch08/test08_keras_sg.ipynb
@@ -107,60 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "target_in (InputLayer)          (None, 1)            0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "context_in (InputLayer)         (None, 1)            0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "target_em (Embedding)           (None, 1, 512)       5120000     target_in[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "context_em (Embedding)          (None, 1, 512)       5120000     context_in[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "target_re (Reshape)             (None, 512, 1)       0           target_em[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "context_re (Reshape)            (None, 512, 1)       0           context_em[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "output_dot (Dot)                (None, 1, 1)         0           target_re[0][0]                  \n",
-      "                                                                 context_re[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "output_re (Reshape)             (None, 1)            0           output_dot[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "output_sig (Dense)              (None, 1)            2           output_re[0][0]                  \n",
-      "==================================================================================================\n",
-      "Total params: 10,240,002\n",
-      "Trainable params: 10,240,002\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n",
-      "Epoch 1/5\n",
-      "1093740/1093740 [==============================] - 234s 214us/step - loss: 0.4465\n",
-      "Epoch 2/5\n",
-      "1093740/1093740 [==============================] - 235s 215us/step - loss: 0.2462\n",
-      "Epoch 3/5\n",
-      "1093740/1093740 [==============================] - 245s 224us/step - loss: 0.0668\n",
-      "Epoch 4/5\n",
-      "1093740/1093740 [==============================] - 251s 230us/step - loss: 0.0259\n",
-      "Epoch 5/5\n",
-      "1093740/1093740 [==============================] - 252s 230us/step - loss: 0.0222\n"
-     ]
-    },
-    {
      "ename": "NameError",
-     "evalue": "name 'ptd' is not defined",
+     "evalue": "name 'pairs' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-38dc02fc55e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[0msimilar_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Similar to {0:}:'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mptb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid2word\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx_valid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop_k\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m         \u001b[0msimilar_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'{0:} {1:}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimilar_str\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mptd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid2word\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msimilar_words\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimilar_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ptd' is not defined"
+      "\u001b[1;32m<ipython-input-1-868dc0d1d101>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 将目标和上下文单词转换为二维数组\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mpairs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnputil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munit_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pairs' is not defined"
      ]
     }
    ],
@@ -193,7 +151,7 @@
     "output = Reshape((1,), name='output_re')(output)\n",
     "output = Dense(1, activation='sigmoid', name='output_sig')(output)\n",
     "\n",
-    "# 创建用于查找词向量的功能性模型\n",
+    "# 创建用于查找词向量的功能性模型l\n",
     "model = Model(inputs=[target_in, context_in], outputs=output)\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "model.summary()\n",
@@ -219,7 +177,7 @@
     "    similar_words = (-similarity_scores).argsort()[1:top_k+1]\n",
     "    similar_str = 'Similar to {0:}:'.format(ptb.id2word[x_valid[i]])\n",
     "    for k in range(top_k):\n",
-    "        similar_str = '{0:} {1:}'.format(similar_str, ptd.id2word[similar_words[k]])\n",
+    "        similar_str = '{0:} {1:}'.format(similar_str, ptb.id2word[similar_words[k]])\n",
     "    print(similar_str)\n",
     "    \n",
     "    "
